:green_heart: Test CI workflow locally